# jellyfish-cell-life-sim

./: Cargo.toml
src/: agents.rs  environment.rs  gpu.rs  main.rs  params.rs  render_plane.rs  shader.wgsl  shader_agent.wgsl  shader_compute_agent.wgsl  shader_compute_env.wgsl  shader_plane_agent.wgsl  shader_plane_env.wgsl
